src/assets/css/homepage.css
* {
    margin: 0 auto;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Ariel, Helvetica, sans-serif;
}
/*#root {*/
    /*height: 100%;*/
    /*width: 100%;*/
    /*display: block;*/
    /**/
/*}*/
.container {
    width: 100%;
    max-width: 1000px;
}

.header {
    position: relative;
    background: #fffabe url('../images/logo.png') no-repeat 7% 50%;
    width: 100%;
    max-width: 1000px;
    height: 72px;
}

.navigation {
    position: absolute;
    right: 0;
    margin: 0;
    padding: 5px 0;
}
.navigation .nav-list {
    padding: 0;
    margin: 0;
}
.nav-item {
    padding: 22px;
    display: inline-block;
}

li a:hover {
    color: #d42551;
}

.logoContainer{
    left: 2%;
}
.logo {
    height: 75%;
    width: 65%;
}

.welcomeContainer{
    width: 100%;
    max-width: 1000px;
    height: 400px;
}

.welcomeContainer .welcomeImage {
    max-width:100%;
    max-height:100%;
}

.content-container{
    height: 60%;
    width: 90%;
    display: flex;
    padding: 5% 0;
}

.welcomeInfo h2 {
    padding-bottom: 5%;
}

.welcomeInfo p {
    padding-bottom: 5%;
    font-size: 1.1em;
}

#macaronsimage {
    float: left;
    height: 30%;
    padding-right: 5%;
    padding-top: 10%;
}

.welcomeInfo {
    float: right;
}

.schedule {
    width: 100%;
    display: flex;
    align-content: center;
    background-color: white;
    justify-content: center;
    padding-bottom: 5%;
    margin-right: .5%;
}

.schedule .day {
    text-align: start;
}
.day {
    width: 11%;
    margin: 1% 1% 0% 0%;
    display: inline-flex;
    background-color: lightgoldenrodyellow;
    flex-direction: column;
}

.day-div, .time-dev{
    padding-top: 10%;
    padding-bottom: 10%;
}

.day-div{
    font-size: 18px;
}
.dayTime {
    width: 100%;
    justify-content: space-between;
    align-content: center;
    flex-direction: column;
    display: flex;
    text-align: center;
}

.time {
    font-size: 12px;
    width: 100%;
    display: flex;
}

.dayFont{
    font-size: 14px;
    width: 100%;
    display: flex;
}

.align-self{
    align-self: flex-end;
}
.macaron {
    padding-top: 8%;
    padding-bottom: 8%;
    width: 100%;
    justify-content: space-between;
    flex-direction: row;
    display: flex;
    font-size: 14px;
    align-self: flex-end;
}
.coconut {
    background-color: #824603;
    width: 100%;
    display: flex;
    color: whitesmoke;
}

.vanilla {
    background-color: #df5277;
    width: 100%;
    display: flex;
    color: whitesmoke;
}

.lemon {
    background-color: #a2304e;
    width: 100%;
    display: flex;
    color: whitesmoke;
}

.almond {
    background-color: #c39005;
    width: 100%;
    display: flex;
    color: whitesmoke;
}

.our-macarons-text h2 {
    padding-bottom: 5%;
}

.our-macarons-text p {
    padding-bottom: 5%;
}

.our-macarons-image {
    width: 100%;
    background-image: url("../images/our-macarons-background.png");
    background-repeat: no-repeat;
    background-position: 70% 80%;
    padding-bottom: 10%;
    background-size: 100% auto;
}

/*Gifts and Parties Page*/
.gifts-image-container {
    width: 100%;
    max-width: 1000px;
    height: 400px;
}

.giftsImage {
    max-width:100%;
    max-height:100%;
}

.gift-container {
    height: 60%;
    width: 90%;
    display: block;
    padding: 5% 0;
}

.gift-container h2 {
    padding-bottom: 5%;
}

.gift-container p {
    padding-bottom: 5%;
}

.gift-container a {
    color: deeppink;
}

.gifts-background-image{
    width: 100%;
    background-image: url("../images/gifts-parties-background.png");
    background-repeat: no-repeat;
    background-position: 70% 80%;
    padding-bottom: 20%;
    background-size: 100% auto;
}

.gift-box {
    padding-bottom: 5%;
    margin-left: 5%;
}

.five-tiered {
    padding-bottom: 1%;
    width: 65%;
    float: left;
}

.contactInfoContainer{
    height: 35%;
    width: 100%;
    display: flex;
    flex-direction: row;
    margin-top: 2%;
    margin-bottom: 5%;
}

.contactInfo {
    width: 40%;
    display: flex;
    flex-direction: column;
    align-content: flex-start;
    margin-left: 5%;
    margin-right: 5%;
}

.contactFormContainer {
    width: 40%;
    display: flex;
    margin-right: 5%;
}

.contactInfoImage {
    width: 40%;
}

.contactInfoImage img {
    padding-top: 14%;
}

.visitUs{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    color: #6a6969;
    margin-bottom: 5%;
}

.visitUsInfo {
    font-size: 1.25em;
}

.holiday {
    margin-bottom: 10%;
}

.contactImageContainer {
    width: 100%;
    max-width: 1000px;
    height: 400px;
}

.contactImage {
    max-width:100%;
    max-height:100%;
}

.orderLink {
    color: deeppink;
}

.order-div {
    margin-bottom: 10%;
}

.contactFormHeader {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    color: #6a6969;
    margin-bottom: 5%;
}

input {
    height: 35px;
    width: 310px;
    background-color: #f5f5f5;
    border: none;
    margin-bottom: 2%;
    font-size: 1em;
}

.textArea {
    height: 105px;
    width: 310px;
    background-color: #f5f5f5;
    border: none;
    margin-bottom: 10px;
    font-size: 1.25em;
}

footer {
    width: 100%;
    background-color: #df5277;
    display: block;
    color: white;
}

.footer-container {
    width: 100%;
    text-align: center;
}

.footer_email, .footer_phone_number, .footer_follow_us {
    display: inline-block;
    text-align: center;
    width: 33%;
    padding-top: 2%;
    padding-bottom: 2%;
    color: white;
    font-size: 1.4em;
}

.footer_follow_us img {
    padding-left: 15px;
    padding-right: 15px;
}

.footer_copyright {
    color: white;
    text-align: center;
    box-sizing: border-box;
    font-size: 1.2em;
}

.footer_info {
    list-style-type: none;
    display: flex;
    height: 100%;
    width: 100%;
}
/* ... */

